Sun Apr 19 01:03:56 2009  Tanaka Akira  <akr@fsij.org>

	* process.c (proc_setuid): use rb_f_notimplement if not implemented.
	  (proc_setgid): ditto.

Sat Apr 18 23:07:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c: use rb_f_notimplement for methods not
	  implemented.

	* ext/openssl/ossl_engine.c: ditto.

	* ext/openssl/ossl_config.c: ditto.

	* ext/openssl/ossl_cipher.c: ditto.

	* ext/openssl/ossl_pkcs5.c: ditto.

	* ext/openssl/ossl_x509ext.c: ditto.

	* ext/socket/socket.c: ditto.

	* ext/socket/basicsocket.c: ditto.

	* ext/socket/ancdata.c: ditto.

	* ext/socket/unixsocket.c: ditto.

	* ext/iconv/iconv.c: ditto.

Sat Apr 18 21:07:34 2009  Tanaka Akira  <akr@fsij.org>

	* ext/curses/curses.c: use rb_f_notimplement for methods not
	  implemented.

Fri Apr 17 01:51:17 2009  Tanaka Akira  <akr@fsij.org>

	* node.h (rb_notimplement_body_p): declared.

	* vm_method.c (Init_eval_method): suppress a warning.

	* io.c (rb_io_fsync): use rb_f_notimplement if not implemented.
	  (rb_io_close_on_exec_p): ditto.
	  (rb_io_set_close_on_exec): ditto.
	  (rb_io_fcntl): ditto.
	  (rb_f_syscall): ditto.

	* dir.c (dir_tell): ditto.
	  (dir_seek): ditto.
	  (dir_s_chroot): ditto.

	* process.c (proc_getpgrp): ditto.
	  (proc_setpgrp): ditto.
	  (proc_getpgid): ditto.
	  (proc_setpgid): ditto.
	  (proc_setsid): ditto.
	  (proc_getpriority): ditto.
	  (proc_setpriority): ditto.
	  (proc_getrlimit): ditto.
	  (proc_setrlimit): ditto.
	  (p_sys_setuid): ditto.
	  (p_sys_setruid): ditto.
	  (p_sys_seteuid): ditto.
	  (p_sys_setreuid): ditto.
	  (p_sys_setresuid): ditto.
	  (p_sys_setgid): ditto.
	  (p_sys_setrgid): ditto.
	  (p_sys_setegid): ditto.
	  (p_sys_setregid): ditto.
	  (p_sys_setreuid): ditto.
	  (p_sys_setresgid): ditto.
	  (p_sys_issetugid): ditto.
	  (proc_getgroups): ditto.
	  (proc_setgroups): ditto.
	  (proc_initgroups): ditto.
	  (proc_daemon): ditto.
	  (rb_proc_times): ditto.

	* file.c (rb_file_s_lchown): ditto.
	  (rb_file_s_link): ditto.